# hash-cache

./: .gitignore  CMakeLists.txt  README.md  cache.c  hash.c  hash_cache.c  hash_optimal.c  hash_table.c  hash_table_test.c  lorem_ipsum_small.txt  main.c  words.md
.github/workflows/: cmake.yml
cmake/: hash-cache-config.cmake
include/hash_cache/: cache.h  hash.h  hash_cache.h  hash_table.h
resources/: fruits  http_request_headers  http_response_headers  lorem_ipsum_small.txt
